Fix: active category not showing, image size issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,10 +41,10 @@ body {
 
 /* Image thumbnails */
 .featured-img {
-  height: 15.625rem; /* 250px */
-  object-fit: cover;
-  width: 100%;
   display: block;
+  width: 100%;
+  max-height: 250px;
+  object-fit: cover;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
 }
